--- a/style.css
+++ b/style.css
@@ -1,13 +1,24 @@
 
 @import url('https://fonts.googleapis.com/css2?family=LXGW+WenKai+Mono+TC:wght@400;700&display=swap');
 
+@font-face {
+    font-family: "LXGW WenKai Mono TC", serif;
+    font-weight: 400;
+    font-style: normal;
+}
 
+@font-face {
+    font-family: "LXGW WenKai Mono TC", serif;
+    font-weight: 700;
+    font-style: normal;
+}
+  
 
 h1 {
     color: red;
 }
 
-p {
+body {
     font-family: "LXGW WenKai Mono TC", serif;
 }
 
