--- a/docs/stylesheets/style.css
+++ b/docs/stylesheets/style.css
@@ -1,5 +1,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=LXGW+WenKai+Mono+TC:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cactus+Classical+Serif&display=swap');
+
+
 
 @font-face {
     font-family: "LXGW WenKai Mono TC", serif;
@@ -13,12 +16,14 @@
     font-style: normal;
 }
   
-
-h1 {
-    color: red;
+@font-face {
+    font-family: "Cactus Classical Serif", serif;
+    font-weight: 400;
+    font-style: normal;
 }
+  
 
-body {
-    font-family: "LXGW WenKai Mono TC", serif;
+body, h1, h2, h3, h4, h5, h6 {
+    font-family: "Cactus Classical Serif", serif;
 }
 
