--- a/docs/stylesheets/style.css
+++ b/docs/stylesheets/style.css
@@ -1,7 +1,7 @@
 
 
 @import url('https://fonts.googleapis.com/css2?family=LXGW+WenKai+TC:wght@400;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
   
 @font-face {
     font-family: "LXGW WenKai TC", serif;
@@ -15,9 +15,35 @@
     font-style: normal;
 }
   
+@font-face {
+    font-family: "Ubuntu Mono", serif;
+    font-weight: 400;
+    font-style: normal;
+}
+  
+@font-face {
+font-family: "Ubuntu Mono", serif;
+font-weight: 700;
+font-style: normal;
+}
+
+@font-face {
+font-family: "Ubuntu Mono", serif;
+font-weight: 400;
+font-style: italic;
+}
+
+@font-face {
+font-family: "Ubuntu Mono", serif;
+font-weight: 700;
+font-style: italic;
+}
   
 
 body {
     font-family: "LXGW WenKai TC", serif;
 }
 
+code,kbd,pre {
+    font-family: "Ubuntu Mono", monospace;
+} 
